# pinyin-tones

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: pinyin-docs.agent.md  pinyin-gui.agent.md  pinyin-speed.agent.md  pinyin-test-debug.agent.md
docs/: ARCHITECTURE.md  BUILD.md  DOWNLOAD.md  USER_GUIDE.md
pinyin_app/: autostart.py  buffer.py  build_instructions.md  config_store.py  hotkeys.py  pinyin_converter.py  pinyin_live.py  requirements.txt  settings_ui.py  tray_ui.py
pinyin_app/docs/: USER_GUIDE.md
pinyin_app/scripts/: build_linux.sh  build_macos.sh  build_release.py  build_windows.bat  send_hotkey.py  send_sequence.py
pinyin_app/src/: pinyin_converter.py  pinyin_live.py
src/pinyin_app/: __main__.py  autostart.py  clipboard.py  pinyin_live.py  settings_ui.py  tray_ui.py
tests/: test_build_release.py  test_converter.py  test_live_flow.py
tools/: build_linux.sh  build_macos.sh  build_release.py  build_windows.bat  run_tests.py
