[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinyin-tones"
version = "0.1.0"
description = "Real-time pinyin tone conversion while you type."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "ffbnchtt" }]
dependencies = [
  "pynput==1.7.6",
  "pyautogui==0.9.54",
  "pystray==0.19.5",
  "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = ["pyinstaller==6.3.0"]

[project.scripts]
pinyin-tones = "pinyin_app.pinyin_live:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pinyin_app = ["assets/tray/*.png"]
